# DevWorkBench

./: .gitignore  CMakeLists.txt  DevWorkBench.code-workspace  README.MD  build.bat  devnotes.txt  issues011123  main.cpp
cmake/: UpdateSubmodule.cmake
includes/: DevWindow.h  Style.h  Tab.h  TopMenuOption.h  appconfig.h
src/Window/: DevWindow.cpp  Tab.cpp
test/: CMakeLists.txt  testmain.cc
